--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,21 @@ __pycache__
 # CDK asset staging directory
 .cdk.staging
 cdk.out
+
+
+.pipenv.sync
+# Byte-compiled / optimized / DLL file s
+__pycache__/
+*.py[cod]
+*$py.class
+.vscode
+.idea
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+
+
+# Mac temp file
+.DS_Store
